[tool.poetry]
name = "conclave-engine"
version = "1.0.0"
description = "Air-Gapped Synthetic Data Generation Engine"
authors = []
license = "AGPL-3.0-or-later"
readme = "README.md"
packages = [{ include = "synth_engine", from = "src" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
# ---------------------------------------------------------------------------
# CLI entrypoints
# ---------------------------------------------------------------------------
[tool.poetry.scripts]
conclave-subset = "synth_engine.bootstrapper.cli:subset"
conclave-audit = "synth_engine.bootstrapper.cli:audit_group"
generate-ts-types = "scripts.generate_ts_types:main"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
click = ">=8.0.0,<9.0.0"
fastapi = ">=0.115.0,<0.136.0"
uvicorn = {version = ">=0.32.0,<0.42.0", extras = ["standard"]}
huey = {version = ">=2.5.0,<3.0.0", extras = ["redis"]}
redis = ">=5.0.0,<6.0.0"
opentelemetry-sdk = ">=1.28.0,<2.0.0"
opentelemetry-instrumentation-fastapi = ">=0.49b0,<1.0.0"
httpx = ">=0.27.0,<1.0.0"
sqlmodel = ">=0.0.21,<0.1.0"
alembic = ">=1.14.0,<1.19.0"
psycopg2-binary = ">=2.9.0,<3.0.0"
cryptography = ">=46.0.6,<47.0.0"
PyJWT = {version = ">=2.10.0,<3.0.0", extras = ["cryptography"]}
prometheus-client = ">=0.21.0,<1.0.0"
pydantic = ">=2.0.0,<2.13.0"
faker = "^40.11.0"
pandas = ">=2.2.0,<3.0.0"
numpy = ">=1.26.0,<3.0.0"
psutil = ">=5.9.0,<8.0.0"
# asyncpg: async PostgreSQL driver for SQLAlchemy's asyncio extension.
# Used as the DSN scheme ``postgresql+asyncpg://`` in production DATABASE_URL.
# Not directly imported in Python code — registered as a SQLAlchemy dialect.
# Must remain a production dep: integration tests and the async DB layer require it.
asyncpg = ">=0.29.0,<0.32.0"
# greenlet: required by SQLAlchemy async extension (sqlalchemy.ext.asyncio).
# On ARM64 (Apple Silicon / Linux aarch64) the SQLAlchemy platform marker
# does not match "aarch64" for arm64, so greenlet is not auto-installed.
# Pinning explicitly ensures it is always present regardless of platform.
greenlet = ">=3.0.0,<4.0.0"
sse-starlette = ">=2.1.0,<4.0.0"
# qrcode[pil]: QR code generation for /license/challenge endpoint.
# Used to render the hardware challenge payload as a scannable QR code in
# air-gapped activation workflows.  The pil extra pulls in Pillow for PNG
# image rendering (base64-encoded in the API response).
# Version 8.2 verified on PyPI (T5.2).
qrcode = {version = ">=8.0.0,<9.0.0", extras = ["pil"]}
# pillow: direct pin required (B8 — T5.2 review).
# pillow is a transitive dependency of qrcode[pil] but pinned here explicitly
# to ensure version stability and allow security audits via pip-audit.
pillow = ">=12.0.0,<13.0.0"
pydantic-settings = ">=2.0.0,<3.0.0"
bcrypt = ">=4.0.1,<6.0.0"
# limits: in-memory fixed-window rate limiting for RateLimitGateMiddleware.
# This is the same underlying engine used by slowapi.  MemoryStorage backend
# requires no external services — air-gap safe.  Added in T39.3.
limits = ">=3.14.0,<6.0.0"
opentelemetry-exporter-otlp-proto-grpc = ">=1.28.0,<2.0.0"
authlib = ">=1.3.0,<2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3,<10.0.0"
pytest-cov = "^6.1"
pytest-asyncio = ">=1.3.0,<2.0.0"
ruff = "^0.11"
mypy = "^1.15"
bandit = { version = "^1.8", extras = ["toml"] }
pip-audit = "^2.9"
vulture = "^2.14"
import-linter = "^2.3"
pre-commit = "^4.2"
cyclonedx-bom = "^5.1"
detect-secrets = "^1.5"
# Type stubs for synthesizer module dependencies (T4.1)
# boto3-stubs provides mypy coverage for the MinioStorageBackend;
# pandas-stubs covers EphemeralStorageClient DataFrame parameters.
pandas-stubs = ">=2.2.0,<4.0.0"
types-psutil = ">=5.9.0,<8.0.0"
boto3-stubs = ">=1.35.0,<2.0.0"
# aiosqlite: async SQLite driver for unit tests using AsyncSession with SQLite
# Required by T4.4 unit tests that test async DB infrastructure without PostgreSQL.
aiosqlite = ">=0.19.0,<1.0.0"
# datamodel-code-generator: CLI tool for generating TypeScript types from the
# FastAPI OpenAPI schema (scripts/generate_ts_types.py, generate-ts-types CLI).
# Dev-only scaffolding tool; not used at runtime in src/synth_engine.
# Previously misplaced between [tool.poetry.group.dev.dependencies] and
# [tool.poetry.group.integration.dependencies] — moved here explicitly (T18.2).
datamodel-code-generator = ">=0.50.0,<1.0.0"
# Property-based testing for unit tests (T19.3). Dev group — runs in tests/unit/.
hypothesis = "^6.151.9"
# mutmut: mutation testing for security-critical modules (T49.5).
# ADR-0047 mandates mutation testing on shared/security/ and modules/privacy/.
# Target modules are configured in [tool.mutmut] below.  The [tool.mutmut]
# runner uses `python -m pytest` which invokes the poetry-managed interpreter.
mutmut = "^3.5.0"

# ---------------------------------------------------------------------------
# Integration group — NOT included by default; wired in Task 2.2
# Install with: poetry install --with dev,integration
# Requires libpq (PostgreSQL client library) to be present on the host.
# ---------------------------------------------------------------------------
pydoclint = "^0.8.3"
cosmic-ray = "^8.4.4"
pytest-xdist = "^3.8.0"
pytest-httpserver = ">=1.1.0,<2.0.0"
[tool.poetry.group.integration.dependencies]
pytest-postgresql = "^7.0"

# ---------------------------------------------------------------------------
# Synthesizer group — T4.1 (GPU Passthrough & Ephemeral Storage)
#                      T4.2b adds sdv (CTGAN via SDV library)
# Install with: poetry install --with dev,synthesizer
#
# Rationale for each dependency:
#   torch    — GPU/CPU device detection via torch.cuda.is_available(); CTGAN/TVAE
#              training backend (ADR-0017). FORCE_CPU=true provides CI fallback.
#              Corrected from >=2.10.0 (non-existent) to >=2.5.0 (T4.1 fix).
#   pyarrow  — Parquet serialisation engine used by pandas.to_parquet() /
#              pd.read_parquet(). Preferred over fastparquet for broader type
#              coverage and NumPy 2.x compatibility.
#              Updated to >=22.0.0 — first release with full NumPy 2.x
#              compatibility; earlier releases had incomplete NumPy 2.0 support.
#   boto3    — S3-compatible client for the concrete MinIO backend
#              (EphemeralStorageClient's MinioStorageBackend). Unit tests use
#              InMemoryBackend and never instantiate this class.
#   sdv      — Synthetic Data Vault: provides CTGANSynthesizer for per-table
#              CTGAN training (ADR-0017). Verified on PyPI: latest 1.34.3.
#              Version range >=1.17.0,<2.0.0 chosen: 1.17 introduced the
#              stable CTGANSynthesizer API used in T4.2b; <2.0.0 guards against
#              breaking API changes in a future major release.
# Note: pandas is in [tool.poetry.dependencies] (main group); removed from
# synthesizer group to avoid redundancy (T4.1 fix).
# ---------------------------------------------------------------------------
[tool.poetry.group.synthesizer.dependencies]
torch = {version = ">=2.5.0,<3.0.0", python = ">=3.12,<3.14"}
pyarrow = ">=22.0.0,<24.0.0"
boto3 = ">=1.35.0,<2.0.0"
sdv = {version = ">=1.17.0,<2.0.0", python = ">=3.12,<3.14"}
# opacus 1.5.4 — Differential Privacy for PyTorch (DP-SGD via PrivacyEngine).
# Verified compatible: opacus>=1.4.0 requires torch>=2.0; our env has torch 2.10.0.
# No Python version constraint needed — opacus requires python>=3.7.5.
# Added in T4.3b (ADR-0017: CTGAN + Opacus DP path).
opacus = ">=1.4.0,<2.0.0"

# ---------------------------------------------------------------------------
# Demos group — T52.1 (Demo & Benchmark Suite)
# Install with: poetry install --with dev,demos
#
# Rationale for each dependency:
#   matplotlib   — 2-D plotting for epsilon/quality curves and heat maps
#   seaborn      — Statistical visualisation built on matplotlib
#   jupyter      — Notebook server and kernel for interactive demos
#   scikit-learn — KS statistic, chi-squared, MAE via sklearn.metrics
#   nbstripout   — Strips notebook output before commit (pre-commit hook)
# ---------------------------------------------------------------------------
[tool.poetry.group.demos]
optional = true

[tool.poetry.group.demos.dependencies]
matplotlib = "^3.9"
seaborn = "^0.13"
jupyter = "^1.0"
scikit-learn = "^1.5"
nbstripout = "^0.7"
scipy = "^1.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ---------------------------------------------------------------------------
# Ruff — Linting and Formatting
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "S", "B", "A", "C4", "PT", "RUF"]
ignore = ["S101"]
# external: pydoclint DOC* codes are valid noqa targets; tell ruff not to flag
# them as "unused noqa directives" (RUF100). DOC502 is used on functions where
# exceptions propagate from callees rather than explicit raise statements.
external = ["DOC"]

[tool.ruff.lint.per-file-ignores]
# S101: assert — allowed in tests and scripts
# S105: hardcoded-password-string — test-only credentials, not real secrets
# S106: hardcoded-password-in-argument — secret_key/access_key in unit tests are test-only
# S108: insecure /tmp usage — mocked paths in unit tests are not real filesystem calls
# RUF002: ambiguous unicode in docstrings — pre-existing test docstrings use EN DASH notation
# S603/S607: subprocess/shellcheck invocations in validation tests (trusted static lists, not user input)
# RUF012: ClassVar annotation on test class-level constants is an ergonomic choice, not a safety issue
# E712: assert x == True/False — required for strong assertion pattern in test quality gates (P73)
"tests/**" = ["S101", "S105", "S106", "S108", "RUF002", "S603", "S607", "RUF012", "E712"]
# E501: bcrypt test hashes + '# pragma: allowlist secret' comment exceed 100 chars at 12-space indent.
#       The hash value cannot be split; gitleaks requires the pragma on the same line.
"tests/unit/test_p68_t684_t687_health_bcrypt_bounds_failopen_attack.py" = ["S101", "S105", "S106", "S108", "RUF002", "S603", "S607", "RUF012", "E501"]
# S603/S607: subprocess without shell=True / partial path — pre-existing scripts
# UP006/UP035: typing.List is deprecated — scripts pre-date pyproject.toml; modernise in Task 2.x
"scripts/**" = ["S603", "S607", "UP006", "UP035"]
# Notebooks: pre-existing issues deferred to a dedicated cleanup task.
# E402: cell-relative imports appear after setup code
# E501: long lines in demo output strings
# I001: unsorted imports in demo cells
# B905: zip() strict= not present in demos
# F541: f-string without placeholders in print statements
# UP024: use OSError alias — pre-dates this rule
"demos/*.ipynb" = ["E402", "E501", "I001", "B905", "F541", "UP024"]
# S311: PRNG intentional — spike code uses random for synthetic data, not cryptography
# S608: SQL injection — spike code uses schema identifiers from sqlite_master, not user input
# RUF100: noqa S311 directives are intentionally co-located with nosec B311 for dual-tool
#         suppression documentation; the file-level S311 ignore makes them technically unused.
# These are exploratory spikes, not production code.
"docs/retired/spikes/**" = ["S311", "S608", "RUF100"]
# S608: same rationale as docs/retired/spikes — schema identifiers from sqlite_master only.
"docs/archive/spikes/**" = ["S311", "S608", "RUF100"]
# B008: FastAPI Depends() in argument defaults is the canonical FastAPI DI pattern.
# The inner `dependency` function is only invoked by the FastAPI framework, never
# called directly as plain Python, so this is intentional and safe.
"src/synth_engine/bootstrapper/dependencies/auth.py" = ["B008"]
# B008: same rationale as auth.py — Depends() calls in route argument defaults are
# intentional FastAPI DI usage, not eager function calls.
"src/synth_engine/bootstrapper/main.py" = ["B008"]
# B008: same rationale as auth.py — Depends() calls in route argument defaults are
# intentional FastAPI DI usage, not eager function calls.
# BLE001: licensing.py catches broad Exception in _render_qr_code() — intentional
# fallback that guards against any qrcode/Pillow import or rendering error.
"src/synth_engine/bootstrapper/routers/licensing.py" = ["B008", "BLE001"]
# BLE001: cli.py catches broad Exception intentionally — it is the top-level error
# boundary for the CLI; tracebacks must never reach the operator.
"src/synth_engine/bootstrapper/cli.py" = ["BLE001"]
# BLE001: errors.py catches broad Exception intentionally — it is the RFC 7807
# catch-all middleware boundary; all exceptions must be captured for sanitized output.
"src/synth_engine/bootstrapper/errors.py" = ["BLE001"]
# S608: SQL injection — alembic migration uses float() validated value embedded in SQL;
#   epsilon_float is the result of float(str) so it cannot contain SQL injection characters.
#   Alembic data migrations must use op.execute() with raw SQL (not ORM models) to
#   avoid coupling migration history to model code changes (see migration docstring).
"alembic/versions/**" = ["S608"]
# F821: undefined names — vulture whitelist uses bare identifiers intentionally so vulture's
#       AST walker sees the names as "used". These are not real undefined names; the file
#       exists solely as a vulture false-positive suppression mechanism (T12.2, P13-T13.1).
# B018: useless expression — same root cause; bare identifiers are valid statements in this
#       context because the file is never executed as production code.
# E501: line too long — inline comments describe runtime call sites for each whitelisted name;
#       truncating them reduces clarity without any production benefit.
".vulture_whitelist.py" = ["F821", "B018", "E501"]

# ---------------------------------------------------------------------------
# Mypy — Strict Type Checking (src/synth_engine only; scripts/ pre-date this)
# ---------------------------------------------------------------------------
[tool.mypy]
strict = true
python_version = "3.12"
mypy_path = "src"
packages = ["synth_engine"]

# ---------------------------------------------------------------------------
# Per-module overrides for optional synthesizer dependency group packages.
# sdv, ctgan, opacus, and torch are installed only with --with synthesizer.
# The pre-commit mirrors-mypy hook runs without these packages; using
# ignore_missing_imports prevents "import-not-found" errors in that context.
# No inline type: ignore comments needed -- ignore_missing_imports suppresses all import errors.
#
# Strategy decision (AC3 -- T20.4): ignore_missing_imports is KEPT because none of
# these packages ship py.typed -- removing the override would produce unverified Any
# inference, not real type coverage. API breakage is caught at runtime by integration
# tests (T20.2). See ADR-0032 for full rationale.
# ---------------------------------------------------------------------------

[[tool.mypy.overrides]]
module = ["sdv.*", "ctgan.*", "opacus.*", "huey", "huey.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# pydantic-settings ships py.typed in newer releases but some environments
# (e.g. pre-commit mypy hook) may not have it installed alongside pydantic.
# Consistent with the strategy in ADR-0032 — rely on runtime integration tests.
module = ["pydantic_settings"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# limits does not ship py.typed. The pre-commit mirrors-mypy hook runs in an
# isolated environment that may not have limits installed. ignore_missing_imports
# suppresses import-not-found errors in that context; runtime API correctness
# is verified by integration tests (test_rate_limit_middleware.py).
# Added in T39.3 (RateLimitGateMiddleware).
module = ["limits", "limits.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# dp_engine.py has a fallback PrivacyEngine = None in a pragma: no cover branch.
# The type: ignore on that line is needed when opacus is absent but flagged as
# unused when opacus is installed.  warn_unused_ignores is disabled for this
# file only so the fallback type annotation remains correct in both environments.
# T58.1 — TYPE_CHECKING-guarded types for Opacus/PyTorch.
module = ["synth_engine.modules.privacy.dp_engine"]
warn_unused_ignores = false

# ---------------------------------------------------------------------------
# Bandit — Security Scanner (src/, scripts/, and demos/)
# ---------------------------------------------------------------------------
[tool.bandit]
targets = ["src", "scripts", "demos"]
skips = ["B101"]

# ---------------------------------------------------------------------------
# Pytest — Test Runner and Coverage
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "--cov=src/synth_engine",
    "--cov-report=term-missing",
    "--cov-fail-under=95",
    "--tb=short",
]
markers = [
    "unit: Fast, isolated unit tests with no external dependencies",
    "integration: Tests requiring live databases or external services (Task 2.2)",
    "synthesizer: Synthesizer integration tests requiring the synthesizer dependency group (SDV, torch, Opacus)",
    "slow: marks tests as slow-running (for local filtering, not automatically excluded in CI)",
    "sunset_phase_38: Tests scheduled for removal evaluation at Phase 38 (scaffolding-removal guards that pass permanently)",
    "cpu_only: Tests requiring deterministic CPU execution (not safe on GPU due to non-determinism)",
    "infrastructure: Tests that validate infrastructure, scaffolding, documentation, or tooling rather than production business logic",
]
filterwarnings = [
    # Baseline: all warnings are errors — future regressions fail the build.
    # Note: when -W error is passed on the command line, pytest's apply_warning_filters
    # prepends the cmdline filter AFTER config_filters, meaning cmdline -W error ends up
    # at the TOP of the filter chain and overrides all "ignore" entries below.
    # To restore correct precedence for -W error runs, tests/conftest.py defines an
    # autouse fixture (_suppress_third_party_deprecation_warnings) that prepends the
    # critical "ignore" filters INSIDE each test's catch_warnings context, placing them
    # above the cmdline -W error.  The entries below serve as documentation and take
    # effect when pytest is run without an explicit -W error cmdline override.
    "error",
    # SDV 1.x and its dependencies (rdt, copulas) emit DeprecationWarnings
    # from third-party code paths that we cannot fix.  Suppressed to keep
    # -W error clean in unit tests.
    "ignore::DeprecationWarning:sdv",
    "ignore::DeprecationWarning:rdt",
    "ignore::DeprecationWarning:copulas",
    "ignore::FutureWarning:sdv",
    "ignore::FutureWarning:rdt",
    "ignore::FutureWarning:copulas",
    # rdt 1.x imports sre_parse (deprecated in Python 3.14 for removal in 3.16;
    # stdlib module deprecated in 3.14 per PEP 594).  The import is inside rdt
    # which we cannot fix.  Attribute the filter to 'sre_parse' so it catches
    # the DeprecationWarning regardless of which frame emits it.
    "ignore:module 'sre_parse' is deprecated:DeprecationWarning",
    "ignore:module 'sre_constants' is deprecated:DeprecationWarning",
    "ignore:module 'sre_compile' is deprecated:DeprecationWarning",
    # SDV 1.x emits UserWarning about saving metadata to JSON for replicability.
    # This is advisory-only; our workflow does not require persisting metadata
    # separately since it is auto-detected per-run from the training DataFrame.
    "ignore:We strongly recommend saving the metadata:UserWarning:sdv",
    # opacus 1.5.x emits a UserWarning about secure RNG being disabled by default.
    # This is expected behavior in non-production/experimentation mode; the warning
    # is advisory-only and we cannot change third-party code. Scoped to opacus.
    "ignore:Secure RNG turned off:UserWarning:opacus",
    # PyTorch 2.10+ emits a UserWarning from full backward hooks registered by
    # Opacus when no input requires gradients. This is an Opacus internal detail
    # that fires through torch.utils.hooks during DP-SGD backward passes.
    "ignore:Full backward hook is firing when gradients are computed:UserWarning:torch",
    # SQLite in-memory databases used in unit test helpers emit ResourceWarning
    # when the GC collects the engine without explicit dispose(). This is expected
    # behavior in test contexts where engines are intentionally short-lived.
    "ignore::ResourceWarning",
    # PIL/Pillow 11.x emits DeprecationWarning for internal resampling constants
    # in some render paths (ANTIALIAS -> LANCZOS rename).  The call is inside
    # the qrcode library's image rendering; we cannot fix third-party code.
    "ignore::DeprecationWarning:PIL",
]

# ---------------------------------------------------------------------------
# Coverage — Source Mapping and Branch Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["synth_engine"]
branch = true

[tool.coverage.paths]
source = ["src/synth_engine", "*/synth_engine"]

# ---------------------------------------------------------------------------
# Import-Linter — Module Boundary Enforcement
# ---------------------------------------------------------------------------
[tool.importlinter]
root_packages = ["synth_engine"]

# ingestion, mapping, masking, profiler, synthesizer, privacy are all mutually
# independent EXCEPT that subsetting may import from mapping (it needs the DAG
# structure).  subsetting is therefore excluded from this independence contract
# and handled by a dedicated allowed-import contract below.
[[tool.importlinter.contracts]]
name = "Module independence: ingestion, mapping, profiler, masking, synthesizer, privacy are independent"
type = "independence"
modules = [
    "synth_engine.modules.ingestion",
    "synth_engine.modules.mapping",
    "synth_engine.modules.profiler",
    "synth_engine.modules.masking",
    "synth_engine.modules.synthesizer",
    "synth_engine.modules.privacy",
]

# subsetting may import from mapping (DagTraversal needs the topology types);
# it must not import from any other module or from bootstrapper.
[[tool.importlinter.contracts]]
name = "subsetting may only import from mapping (not other modules or bootstrapper)"
type = "forbidden"
source_modules = ["synth_engine.modules.subsetting"]
forbidden_modules = [
    "synth_engine.modules.ingestion",
    "synth_engine.modules.masking",
    "synth_engine.modules.profiler",
    "synth_engine.modules.synthesizer",
    "synth_engine.modules.privacy",
    "synth_engine.bootstrapper",
]

[[tool.importlinter.contracts]]
name = "Modules must not import from bootstrapper"
type = "forbidden"
source_modules = [
    "synth_engine.modules.ingestion",
    "synth_engine.modules.mapping",
    "synth_engine.modules.subsetting",
    "synth_engine.modules.profiler",
    "synth_engine.modules.masking",
    "synth_engine.modules.synthesizer",
    "synth_engine.modules.privacy",
    "synth_engine.shared",
]
forbidden_modules = ["synth_engine.bootstrapper"]

[[tool.importlinter.contracts]]
name = "shared must not import from modules or bootstrapper"
type = "forbidden"
source_modules = ["synth_engine.shared"]
forbidden_modules = [
    "synth_engine.modules.ingestion",
    "synth_engine.modules.mapping",
    "synth_engine.modules.subsetting",
    "synth_engine.modules.profiler",
    "synth_engine.modules.synthesizer",
    "synth_engine.modules.masking",
    "synth_engine.modules.privacy",
    "synth_engine.bootstrapper",
]

# ---------------------------------------------------------------------------
# Vulture — Dead Code Detection
# ---------------------------------------------------------------------------
[tool.vulture]
min_confidence = 80
paths = ["src", ".vulture_whitelist.py"]
# Abstract method parameters in ABCs are intentionally unused in the stub body.
# These names are suppressed to avoid false positives.
ignore_names = ["older_than", "task_id"]

# ---------------------------------------------------------------------------
# Pydoclint — Docstring parameter/return/yield validation
# ---------------------------------------------------------------------------
[tool.pydoclint]
style = "google"
arg-type-hints-in-signature = true
arg-type-hints-in-docstring = false
check-return-types = false
check-class-attributes = false
require-return-section-when-returning-nothing = false
require-yield-section-when-yielding-nothing = false

# ---------------------------------------------------------------------------
# Mutmut — Mutation Testing (T49.5, ADR-0047)
#
# Scope: security-critical modules only — shared/security/ and modules/privacy/.
# These are the modules mandated by ADR-0047 and Constitution Priority 4.
#
# paths_to_mutate: TOML array — mutmut 3.x requires a list, not a comma-
# separated string. A bare string is iterated character-by-character by Python,
# which causes the / separator to be interpreted as the filesystem root.
#
# tests_dir: TOML array — same requirement; single string "tests/unit/" appended
# to pytest_add_cli_args_test_selection as-is, which is what we want.
#
# pytest_add_cli_args: per-mutant pytest flags:
#   -x:      stop on first failure (faster feedback per mutant)
#   -q:      suppress verbose output (reduces log volume)
#   --tb=no: suppress tracebacks (faster; errors are expected for killed mutants)
#   --no-header: suppress pytest header per mutant run
#   --no-cov:    skip coverage collection during mutation runs (speed)
#
# Note: the 2.x "runner" key is NOT supported in mutmut 3.x.
# Per-mutant test execution is configured via pytest_add_cli_args instead.
# ---------------------------------------------------------------------------
[tool.mutmut]
# Walk the full src/synth_engine/ tree so all __init__.py files are copied to
# mutants/src/ (required for Python to find the package). Only files in the two
# security-critical sub-packages actually receive mutations (via do_not_mutate).
paths_to_mutate = ["src/synth_engine/"]
# Skip everything that is NOT a security-critical module.
# These patterns exclude all other packages from mutation while still copying
# their source files to mutants/src/ for import resolution.
do_not_mutate = [
    "src/synth_engine/bootstrapper/*",
    "src/synth_engine/bootstrapper/**/*",
    "src/synth_engine/modules/ingestion/*",
    "src/synth_engine/modules/ingestion/**/*",
    "src/synth_engine/modules/mapping/*",
    "src/synth_engine/modules/mapping/**/*",
    "src/synth_engine/modules/masking/*",
    "src/synth_engine/modules/masking/**/*",
    "src/synth_engine/modules/profiler/*",
    "src/synth_engine/modules/profiler/**/*",
    "src/synth_engine/modules/subsetting/*",
    "src/synth_engine/modules/subsetting/**/*",
    "src/synth_engine/modules/synthesizer/*",
    "src/synth_engine/modules/synthesizer/**/*",
]
tests_dir = ["tests/unit/"]
pytest_add_cli_args = [
    "-x",
    "-q",
    "--tb=no",
    "--no-header",
    "--no-cov",
    # Ignore tests that check project file structure (docker-compose, alembic,
    # scripts, CI configs). These tests verify project hygiene, not module logic,
    # and they fail in the mutants/ sandbox because those files are not copied.
    # Infrastructure and project-hygiene tests that check file structure paths
    # (REPO_ROOT resolution, docker-compose, alembic versions, vulture whitelist)
    # fail in the mutants/ sandbox. These tests do NOT exercise the security or
    # privacy modules being mutated and are excluded here.
    "--ignore=tests/unit/test_ci_infrastructure.py",
    "--ignore=tests/unit/test_config_validation.py",
    "--ignore=tests/unit/test_dependency_audit.py",
    "--ignore=tests/unit/test_docker_image_pinning.py",
    "--ignore=tests/unit/test_dp_training_loop.py",
    "--ignore=tests/unit/test_dp_training_privacy.py",
    "--ignore=tests/unit/test_dp_training_qa_findings.py",
    "--ignore=tests/unit/test_dp_training_strategy_classes.py",
    "--ignore=tests/unit/test_e2e_load_test_script.py",
    "--ignore=tests/unit/test_job_steps.py",
    "--ignore=tests/unit/test_migration_003_epsilon_precision.py",
    "--ignore=tests/unit/test_migration_007_encrypt_connection_metadata.py",
    "--ignore=tests/unit/test_seed_sample_data.py",
    "--ignore=tests/unit/test_synthesizer_engine.py",
    "--ignore=tests/unit/test_synthesizer_tasks.py",
    "--ignore=tests/unit/test_t37_2_advisory_drain.py",
    "--ignore=tests/unit/test_t43_4_hygiene_polish.py",
    "--ignore=tests/unit/test_telemetry.py",
]
# also_copy: additional paths needed by the test suite that are not in src/.
# alembic/ is required by migration tests. .github/ and scripts/ are needed
# by test_ci_infrastructure.py. .vulture_whitelist.py is needed by hygiene tests.
also_copy = ["alembic/", ".github/", "scripts/", ".vulture_whitelist.py"]
